# spectavi

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  setup.py
data/sift-test/: sur-ogre.npz  sur-ogre.pgm  sur-ogre.sift
data/steveston/: K.txt
example/: analyze_bench.py  bench.pickle  ex01_essential_estimation.py  ex01_sift.py  ex02_sift_match.py  util.py
spectavi/: __init__.py  __libspectavi.py  feature.py  mvg.py
src/: BruteForceNn.h  BruteForceNnL1K2.h  Camera.h  CascadingHashNn.h  DltTriangulator.h  EigenDefinitions.h  FundamentalMatrixFitter.h  Hnswlib.h  KMedians.h  RansacFitter.h  Sift.h  Spectavi.cpp  Spectavi.h
test/: test_feature.py  test_mvg.py
